<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">




    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/actionBarItemBackground"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/Theme.AndroidPos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:background="@color/black_russian"
        android:gravity="top"
        android:stretchColumns="*"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="35dp">

            <TextView
                style="@style/MyDashboardTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dashboard" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                style="@style/MyDashboardTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/supplier" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                style="@style/MyDashboardTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customer" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                style="@style/MyDashboardTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                style="@style/MyDashboardTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                style="@style/MyDashboardTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                style="@style/MyDashboardTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sales_transaction" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                style="@style/MyDashboardTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/purchase_transaction" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                style="@style/MyDashboardTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_dues" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                style="@style/MyDashboardTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sales_returns" />
        </TableRow>


    </TableLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tableLayout"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>